Version 1.20.6 *
==================
- Fixed the GDX Viewer symbol table showing a "Loaded" column in some cases.
- Fixed jumping of the horizontal scroll bar of the GDX Viewer symbol table.

Version 1.20.5
==================
- Added `Open Location` and `Open Terminal` to the project context menu.
- Added `Remove Previous Breakpoints` to the code editor context menu.
- Added a dedicated icon for the active PF file.
- Fixed icon highlighting for current project.
- Fixed a GDX Viewer crash when selecting a symbol in a newly created GDX file.
- Removed the DCOs `embeddedCode` from the Completer list.
- Upgraded to Qt 6.8.3 on all platforms.

Version 1.20.4
==================
- Fixed a crash when saving a file to an existing file of the same project.
- Fixed completer suggesting DCO at the wrong place, i.e. only allow DCO at the beginning of the line.
- Fixed block-edit scroll behavior, when the cursor moved up. The view now scrolls to the first line of the block selection.
- Fixed a bug where the GDX Viewer would automatically switch to another symbol in some cases.
- Improved GAMS license file, i.e. it now contains an empty line at the end of the file.
- Improved the `Edit` and context menus by synchronizing the `Edit` menu with the context menu of the editor views.

Version 1.20.3
==================
- Fixed missing universe domain in Reference File Viewer.
- Fixed dialog waiting for printer connection during Studio startup.
- Fixed selection of the default encoding, which was not persistent.
- Fixed Reset button in encodings dialog.
- Improved default selection of encodings, i.e. the ecodings dialog starts with a reduced pre-selection.
- Improved behavior when Studio is starting on a system with a reduced number of encodings. In this case the previous user selection is kept but might not be selectable.
- Improved block edit behaviour, i.e. backspace is blocked when the cursor is in the first column.

Version 1.20.2
==================