@@ -2,6 +2,7 @@ Version 1.20.6 *
 ==================
 - Fixed the GDX Viewer symbol table showing a "Loaded" column in some cases.
 - Fixed jumping of the horizontal scroll bar of the GDX Viewer symbol table.
+- Improved error handling of failed GAMS Engine run.
 
 Version 1.20.5
 ==================
